Add -Djdk.attach.allowAttachSelf=true to surefire config for bmunit
JDK9+ does not allow dynamic loading of agent code by default.  For
BMUnit-based tests to work we need to allow byteman to attach to VMs
so we add this to our surefire config.